# imageflow

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  .travis.yml  .valgrindrc  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTEXT-HANDOFF.md  CONTRIBUTING.md  CTestTestfile.cmake  Cargo.toml  Cross.toml  IMAGEFLOW3-PLAN.md  LICENSE-AGPL3  LICENSE-COMMERCIAL  PLAN.md  README.md  ROADMAP.md  Rakefile  SCHEMA_PLAN.md  SECURITY.md  appveyor.yml  batt.ps1  biicode.conf  bindings.md  boxstarter  build.py  build.sh  build_eclipse.sh  build_only.sh  build_via_docker.sh  c_build_rake.rb  clean_dotfiles.sh  (+35 more)
.cargo/: config  (+2 more)
append_only_set/: Cargo.toml
append_only_set/src/: lib.rs
benchmarks/jpeg-q-ssim2-2026-06-26/harness/: Cargo.toml  analyze.py  convert.py
c_components/: .clion.codestyle.xml  .gitignore  CMakeLists.txt  Cargo.toml  build.py  build.rs  buildc.sh  conanfile.py  imageflow.h  imageflow_advanced.h  profile.sh  profile_powf.txt
c_components/lib/: bitmap_formats.c  bitmap_png.c  codec_jpeg_wrapper.c  codec_jpeg_wrapper.h  codec_png_wrapper.c  codec_png_wrapper.h  codec_wrappers.h  codecs.c  codecs.h  codecs_gif.txt  codecs_jpeg.c  codecs_jpeg.h  codecs_jpeg_idct_fast.c  codecs_jpeg_idct_fast.h  codecs_jpeg_io.c  codecs_png.c  color.c  color.h  compositing.c  context.c  context_heap.c  convolution.c  fastapprox.h  graphics.c  imageflow_private.h  io.c  job.c  math_functions.h  render1d.c  renderer.c  scale2d.c  scaling.c  shared.h  trim_whitespace.c  trim_whitespace.h  weighting.c
c_components/src/: graphics.rs  lib.rs
c_components/test_package/: conanfile.py
c_components/tests/: Cargo.toml  catch.hpp  helpers.c  helpers.h  helpers_visual.c  helpers_visual.h  profile_imageflow.c  runner.cpp  test.cpp  test_context.cpp  test_error_handling.cpp  test_idct_scaling.rs  test_integration.cpp  test_io.cpp  test_operations.cpp  test_simple_fastscaling.cpp  test_variations.cpp  test_weighting.cpp  test_weighting_helpers.cpp
c_components/tests/libpng/: testread.c  testread.sh
c_components/tests/src/: build.rs  lib.rs  profile.rs
fuzz/: .gitignore  Cargo.toml  fuzz.sh  imageflow.dict  json.dict  riapi.dict
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_json.rs  fuzz_pipeline.rs  fuzz_riapi.rs  fuzz_transcode.rs  fuzz_v2_decode.rs  fuzz_v2_transcode.rs
imageflow/: Cargo.toml
imageflow-commands/: Cargo.toml
imageflow-commands/src/: color.rs  composition.rs  decode.rs  encode.rs  geometry.rs  io.rs  lib.rs  pipeline.rs  security.rs  shared.rs
imageflow-commands/tests/: legacy_exhaustive.rs  roundtrip.rs
imageflow/src/: lib.rs
imageflow_abi/: Cargo.toml  README.md  build.rs  conanfile.txt
imageflow_abi/src/: abi_version.rs  context.rs  lib.rs  test.rb
imageflow_cdylib/: Cargo.toml  README.md  buildc.sh  regrind.sh
imageflow_cdylib/src/: lib.rs  test.rb
imageflow_core/: Cargo.toml  README.md  buildc.sh  clear_downloaded_images.ps1  conanfile.txt  override_openssl.sh  perf.data
imageflow_core/benches/: bench_codecs.rs  bench_graphics.rs  substitution_runtime.rs
imageflow_core/examples/: debug_push_decode.rs  debug_push_vs_buffered.rs  decode_jpeg_only.rs  diff_pngs.rs  jpeg_decode_bench.rs  profile_imageflow_decode.rs  test_decode_only.rs  zen_heaptrack.rs  zenbench_quickchart.rs
imageflow_core/src/: abi.rs  allocation_container.rs  boring.rs  codecs.rs  context.rs  context_methods.rs  error.rs  errors.rs  ffi.rs  io.rs  job.rs  job_methods.rs  json.rs  killbits.rs  lib.rs  next.txt  parsing.rs  pipeline.rs  pointer_wrappers.rs  speed.md  static_info.rs  test_helpers.rs  unfixed.txt
imageflow_core/tests/: bitmap.rs  calibration_analysis.rs  codec_calibration.rs  graph.rs  io.rs  malloc.rs  memory.rs  migrate.rs  operation.rs  quality_analysis.rs  quality_profiles.rs  schema.rs  smoke.rs  test_analyze.rs  test_cms_batch.rs  test_cms_compare_backends.rs  test_cms_diagnostic.rs  test_cms_inventory.rs  test_cms_visual_compare.rs  test_color_conversion.rs  test_decoders.rs  test_encoders.rs  test_gama_validation.rs  test_png_color_management.rs  test_robustness.rs  variation.rs  visuals.rs  weights.rs  zen_pipeline_test.rs
imageflow_focus/: Cargo.toml
imageflow_focus/benches/: saliency_bench.rs
imageflow_focus/src/: faces.rs  lib.rs  saliency.rs
imageflow_focus/tests/: validation.rs
imageflow_helpers/: Cargo.toml
imageflow_helpers/src/: colors.rs  debug.rs  fetching.rs  filesystem.rs  hashing.rs  identifier_styles.rs  lib.rs  pollster.rs  preludes.rs  process_capture.rs  process_testing.rs  util.rs
imageflow_http_helpers/: Cargo.toml
imageflow_http_helpers/src/: lib.rs  shellout.rs  ureq.rs
imageflow_macros/: Cargo.toml  utoipa.md
imageflow_macros/src/: lib.rs
imageflow_riapi/: Cargo.toml  README.md
imageflow_riapi/src/: ir4.rs  layout.rs  lib.rs  sizing.rs  sizing_tests.rs  version.rs  vnext.rs
imageflow_serde/: Cargo.toml  build.rs  test_nightly.sh
imageflow_serde/src/: lib.rs  serde_types.in.rs
imageflow_server/: .gitignore  Cargo.toml  README.md  build_server_upload_image_stack_up.sh  dockerize.sh  try.sh
imageflow_server/demo/: index.html
imageflow_server/src/: config.rs  diagnose.rs  disk_cache.rs  lib.rs  main.rs  requested_path.rs  riapi.rs
imageflow_server/tests/: test_ir4.rs
imageflow_tool/: .gitignore  Cargo.toml  README.md  bench.sh  bench2.sh  bench3.sh  bench_single_thread.sh  build_release_tool.sh  test_tool.sh
imageflow_tool/result_testing/: .gitignore  README.md  compare.rb  compare_reset_flow_images.sh  install_tools.sh  preshrink_test.rb  rebuild_retry.sh  scope.sh  turtles.sh
imageflow_tool/src/: capture.rs  cmd_build.rs  lib.rs  main.rs  self_test.rs
imageflow_tool/tests/: test_tool.rs
imageflow_types/: Cargo.toml  build.rs
imageflow_types/src/: build_env_info.rs  build_killbits.rs  collections.rs  endpoint_def.rs  json_messages.rs  killbits.rs  lib.rs  static_info.rs  version.rs
wrappers/server/: .gitignore  Cargo.toml  README.md  README.txt  bench.sh  bench_single_thread.sh  build.rs  buildc.sh  conanfile.txt
(+1276 files in other folders)
