[workspace]
members = [
    "append_only_set",
    "imageflow_helpers",
    "imageflow_http_helpers",
    "imageflow_types",
    "imageflow_riapi",
    "imageflow_core",
    "imageflow_abi",
    "imageflow",
    "imageflow_tool",
    "c_components",
#    "c_components/tests",
]
resolver = "2"

[profile.release]
debug = true
split-debuginfo = "packed"
strip = true
lto = true
# enable on musl: strip = true
# enable on musl: lto = true

# RIAPI Tests take 600ms each at 0, 200ms each at 1, 36ms each at 2, 26ms each at 3
[profile.test]
opt-level = 2

[patch.crates-io]
#  libwebp-sys = { git = "https://github.com/imazen/libwebp-sys" }
libpng-sys = { git = "https://github.com/imazen/rust-libpng-sys" }
lcms2-sys = { git = "https://github.com/imazen/rust-lcms2-sys", branch = "update-lcms2-2.18" }
# load_image.git = "https://gitlab.com/lilith6/load_image.git"
# TODO(rgb-0.8.91): Uncomment when rgb 0.8.91+ is published to crates.io
# This enables: root-level BGR8/BGRA8/RGB8/RGBA8 exports, Gray_v09 compat type,
# and Pod impl for GrayA. Then revert changes in bitmaps.rs marked with TODO(rgb-0.8.91)
# rgb.git = "https://github.com/kornelski/rust-rgb"

#bennch with cpu native
[profile.bench]


# [build]
# rustflags = ["-C", "target-cpu=native"]
