[workspace]
members = [
    "imageflow_types",
    "imageflow_core",
    "imageflow_abi",
    "imageflow",
    "imageflow_tool",
]
# Old crates preserved for reference but excluded from build:
# append_only_set, imageflow_helpers, imageflow_http_helpers,
# imageflow_riapi, c_components
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
authors = ["Lilith River <lilith@imazen.io>"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Zen ecosystem
zenpixels = { version = "0.2.0", default-features = false, features = ["imgref", "planar"] }
zenpixels-convert = { version = "0.2.0", default-features = false, features = ["std", "imgref", "pipeline"] }
# TODO: re-enable "png" once zenpng compiles (has uncommitted WIP changes against updated zencodec)
# TODO: re-enable "jxl-decode", "jxl-encode" once zenjxl-decoder merge conflict is resolved
zencodecs = { path = "../zencodecs", default-features = false, features = ["jpeg", "webp", "gif", "avif-decode", "avif-encode", "heic-decode", "bitmaps-bmp"] }
zenlayout = { path = "../zenlayout", default-features = false, features = ["std", "riapi"] }
zenresize = { path = "../zenresize", default-features = false, features = ["std", "layout"] }
zenfilters = { path = "../zenfilters", default-features = false, features = ["srgb-filters"] }
zenjpeg = { path = "../zenjpeg/zenjpeg", features = ["decoder"] }
garb = { version = "0.2.5", default-features = false, features = ["std", "experimental"] }
zencodec = { version = "0.1.2" }
ultrahdr-core = { path = "../ultrahdr/ultrahdr-core" }
ultrahdr-rs = { path = "../ultrahdr/ultrahdr" }

# Color management
moxcms = { git = "https://github.com/awxkee/moxcms.git", rev = "c4affa1", features = ["in_place"] }

# Cooperative cancellation
enough = { version = "0.4", features = ["std"] }

# Core utilities
rgb = { version = "0.8", features = ["as-bytes"] }
linear-srgb = { version = "0.6.5", default-features = false, features = ["std"] }
imgref = "1.12"
bytemuck = { version = "1.14", features = ["derive"] }

# Patch crates.io deps to use local path versions (sub-codecs reference published versions)
[patch.crates-io]
zenlayout = { path = "../zenlayout" }

[profile.release]
debug = true
split-debuginfo = "packed"
strip = true
lto = true

[profile.test]
opt-level = 2

[profile.bench]
