[package]
name = "imageflow_c_components"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>", "Kornel Lesiński <kornel@geekhood.net>"]
links = "imageflow_c"
workspace = "../"
build = "build.rs"

[lib]
name = "imageflow_c_components"
doctest = false

[build-dependencies]
glob = "0.3.0"

[build-dependencies.cc]
version = "1.0.52"
features = ["parallel"]

[features]
coverage = []
c_tests = []
profiling = []
shared = []

[dependencies]
mozjpeg-sys = {version = "0.10.4", features = ["nasm_simd", "turbojpeg_api"]}
libz-sys = "1.0.18"
libpng-sys = "1.1.8"
lcms2-sys = "3.1.1"
