[package]
name = "imageflow_c_components"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>", "Kornel Lesiński <kornel@geekhood.net>"]
links = "imageflow_c"
workspace = "../"
build = "build.rs"

[lib]
name = "imageflow_c_components"
doctest = false

[build-dependencies]
glob = "0.3.0"

[build-dependencies.cc]
version = "1.0.52"
features = ["parallel"]

[features]
coverage = []
c_tests = []
profiling = []
shared = []

[dependencies]
mozjpeg-sys = {version = "0.10.5", features = ["nasm_simd", "turbojpeg_api"]}

# For build info see

libz-sys = { version = "1.0.18", features = ["static"] }

# For build info see https://github.com/kornelski/rust-libpng-sys/blob/master/Cargo.toml
# And https://github.com/kornelski/rust-libpng-sys/blob/master/build.rs
libpng-sys = { version = "1.1.8", features = ["static", "static-libz", "libz-sys"] }

# For build info see https://github.com/kornelski/rust-lcms2-sys/blob/master/src/build.rs
lcms2-sys = { version = "3.1.4", features = ["static",  "static-fallback", "parallel"] }
