[package]
name = "imageflow"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>"]
edition = "2018"
workspace = "../"

[lib]
name = "imageflow_api"
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageflow_types = { path = "../imageflow_types", version = "*" }
imageflow_helpers = { path = "../imageflow_helpers", version = "*" }
imageflow_riapi = { path = "../imageflow_riapi", version = "*" }
imageflow_core = { path = "../imageflow_core", version = "*" }