[package]
name = "imageflow"
version = "4.0.0-alpha.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "High-level Rust API for imageflow image processing"

[lib]
name = "imageflow_api"
doc = true

[dependencies]
imageflow_types = { path = "../imageflow_types" }
imageflow_core = { path = "../imageflow_core" }
serde_json = { workspace = true }
